--- a/solutions/Week-2/styles.css
+++ b/solutions/Week-2/styles.css
@@ -1,18 +1,13 @@
+
+
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body{
-	margin:0;
+	margin: 0;
 	padding: 0;
-	font-family: "Comic Sans MS", cursive, sans-serif; 
-}
-
-h1 {
-	margin-bottom: 15px;
-	text-align: center;
-	color: black;
-	font-size: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 .row{
@@ -20,102 +15,89 @@ h1 {
   margin-bottom: 5%;
 }
 
-
-.box {
-	width: 100%;
-	overflow: none;
+h1 {
+  margin-bottom: 15px;
+  text-align: center;
+  color: #ff4532;
+  font-size: 50px;
 }
 
-.title1 {
-	margin-right: 30px;
-	background-color: pink;
-	color:black;
-	overflow: none;
-	text-align: center;
-	border: 4px solid black;
-	width: 100px;
-	height: 60px;
-	padding: 5px;
-	float: right;
-	margin-top: 0px;
-	font-weight: bold;
-	position: relative;
 
+.box{
+  width: 100%;
+  overflow: none;
 }
 
-.t2 {
-	margin-right: 30px;
-	background-color: red;
-	color: white;
-	overflow: none;
-	text-align: center;
-	border: 4px solid black;
-	width: 100px;
-	height: 60px;
-	padding: 5px;
-	float: right;
-	margin-top: 0px;
-	font-weight: bold;
-	position: relative;
-}
 
-.t3 {
-	margin-right: 30px;
-	background-color: yellow;
-	color: black;
-	overflow: none;
-	text-align: center;
-	border: 4px solid black;
-	width: 100px;
-	height: 60px;
-	padding: 5px;
-	float: right;
-	margin-top: 0px;
-	font-weight: bold;
-	position: relative;
+.all{
+  overflow: none;
+  text-align: center;
+  border: 4px solid black;
+  width: 100px;
+  height: 60px;
+  padding: 5px;
+  float: right;
+  margin-right: 36px;
+  margin-top: 0px;
+  font-weight: bold;
+  position: relative;
 }
 
 .text{
-	background-color: grey;
-	border: 4px solid black;
-	margin: 2.5%;
-	width: 93%;
-	height: auto;
-	color: black;
-	font-size:25px;
-	padding: 2%;
-	padding-top: 67px; 
+  border: 5px solid black;
+  width: 90%;
+  height: auto;
+  margin: 2.5%;
+  color: black
+  font-size: 25px;
+  padding: 2%;
+  padding-top: 55px;
+  background-color: rgba(0,0,0,0.3);
+}
 
+.p1{
+  background-color: pink;
+}
 
+.p2{
+  color: white;
+  background-color: red;
+}
+.p3{
+  background-color: yellow;
 }
 
 
-@media (min-width: 1200px) {
-	.col-lg-4 {
-		float: left;
-		width: 33.33%
-	}
+/********** Large devices only **********/
+@media (min-width: 992px) {
+  .col-lg-4 {
+  	float: left;
+    width: 33.33%;
+  }
+}
+/********** Medium devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-6,.col-md-12 {
+    float: left;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-12 {
+    margin-left: -10px;
+    width: 100%;
+  }
+  .p3{
+    width: 100px;
+  }
 }
 
-@media (min-width: 767px) and (max-width: 1199px){
-	.col-md-6,.col-md-12 {
-		float: left;
-	}
-	.col-md-6 {
-		width: 50%;
-	}
-	.col-md-12 {
-		width: 100%;
-	}
-	
-
+@media (min-width: 0px) and (max-width: 767px) {
+  .col-sm-12 {
+  	float: left;
+    width: 100%;
+  }
+  .all{
+    margin-right: 30px;
+  }
 }
-
-@media (min-width: 0px) and (max-width: 766px) {
-	.col-sm-12 {
-		float: left;
-		width: 100%;
-	}
-}
-
-
