--- a/solutions/Week-2/styles.css
+++ b/solutions/Week-2/styles.css
@@ -18,7 +18,7 @@ body{
 h1 {
   margin-bottom: 15px;
   text-align: center;
-  color: #ff4532;
+  color: aqua;
   font-size: 50px;
 }
 
@@ -52,7 +52,7 @@ h1 {
   font-size: 25px;
   padding: 2%;
   padding-top: 55px;
-  background-color: rgba(0,0,0,0.3);
+  background-color: grey;
 }
 
 .p1{
